--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,6 @@ project(Tetris)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Tetris main.cpp)
+add_executable(Tetris main.cpp Tetris.cpp Tetris.h)
 
 set(CMAKE_CXX_FLAGS "-lncurses")
